--- a/app/eventyay/static/pretixcontrol/scss/_dashboard.scss
+++ b/app/eventyay/static/pretixcontrol/scss/_dashboard.scss
@@ -164,6 +164,7 @@
   width: 1.25em;
   height: 1.25em;
   vertical-align: -0.2em;
+  margin-right: 0.2em;
   color: inherit;
 }
 
